--- a/fbulvar/static/css/theme-base.css
+++ b/fbulvar/static/css/theme-base.css
@@ -142,6 +142,13 @@ p.sub {
     line-height: 1.4;
     margin-top: 10px;
 }
+.subp p {
+    color: #777;
+    font-size: 21px;
+    font-weight: 300;
+    line-height: 1.4;
+    margin-top: 10px;
+}
 
 .font-pacifico {
     font-family: 'Dancing Script'!important;
