--- a/fbulvar/templates/boutiques.html
+++ b/fbulvar/templates/boutiques.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<section class="menu-top-banner background-boutiques page-title-center">
+<section class="menu-top-banner page-title-center" {% placeholder 'background-image' %}>
   <div class="container">
     <div class="page-title col-md-8">
       <h1>{% page_attribute "page_title" %}</h1>
@@ -19,9 +19,7 @@
 <section class="p-b-0">
   <div class="container">
       <div class="heading heading-center m-b-40">
-          {% placeholder 'boutiques_title' %}<!--
-          <h2>Фирменные магазины</h2>
-          <p class="sub">Два фирменных бутика в Одессе – места, где  мы не только продаем вина из первых рук, но и общаемся с клиентами компании, проводим семинары и занятия с сомелье, дегустации,  встречи с нашими друзьями и  некоторые эксперименты в гастрономическом сопровождения для наших вин.</p>-->
+          {% placeholder 'boutiques_title' %}
       </div>
   </div>
 </section>
@@ -30,17 +28,13 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="heading heading-center m-b-20">
+        <div class="heading heading-center subp m-b-20">
           {% placeholder 'boutiques_photo' %}
-          <img src="{% static 'images/boutiques/boutiques_01.jpg' %}" class="img-responsive" alt="">
-          <p class="sub">Будем рады видеть вас в наших бутиках на Французском Бульваре 10 и проспекте Академика Глушко 14/5</p>
         </div>
       </div>
     </div>
-    <div class="heading heading-center m-b-40 boutiques">
-        {% placeholder 'boutiques_ecommerce' %}
-        <h2>Интернет-магазин</h2>
-        <p class="sub">Нашу продукцию вы можете приобрести также и онлайн в партнерских торговых сетях</p>
+    <div class="heading heading-center subp boutiques m-b-40">
+      {% placeholder 'boutiques_ecommerce' %}
     </div>
   </div>
 </section>
